# taskor

./: .gitignore  .python-version  README.md  pyproject.toml  requirements.txt
taskor/: __init__.py  taskor.py
taskor/resources/: system_prompt.txt
taskor/utils/: __init__.py  assistant_api.py  file_extractor.py  file_selector.py  text_extractor.py
test/main_test/: test.py
test/utils_test/: assistant_api_test.py  file_extractor_test.py  file_selector_test.py
utils/: __init__.py  assistant_api.py  file_extractor.py
